--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,6 +35,7 @@
 @import url('./components/_colourpalette.css');
 @import url('./components/_screen.css');
 @import url('./components/_ribbon.css');
+@import url('./components/_h-card.css');
 
 @import url('./pages/_homepage.css');
 @import url('./pages/_bloglist.css');
