--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -22,7 +22,8 @@
     <link rel="webmention" href="https://webmention.io/frills.dev/webmention">
     <link rel="pingback" href="https://webmention.io/frills.dev/xmlrpc">
     {# Places I claim on the internet #}
-	<link href="mailto:fri11s@proton.me" rel="me">
+    <link rel="me" href="{{metadata.url + page.url}}" class="u-url u-uid">
+	<link rel="me" href="mailto:fri11s@proton.me" class="u-email">
     <link rel="me" href="https://indieweb.social/@frills">
     <link rel="me" href="https://social.lol/@frills">
     <link rel="me" href="https://frills.omg.lol">
