--- a/content/index.njk
+++ b/content/index.njk
@@ -122,13 +122,8 @@ scripts: '
 			body = '
 			<ol class="unstyled mb-0">
 				<li>
-					Stardew Valley
-					<small class="d-b subtext">Teddi of Clover Farm</small>
-					<small class="d-b subtext">Frills of Hiraeth Farm (co-op)</small>
-				</li>
-				<li>
-					Dead Letter Society
-					<small class="d-b subtext">Co-op tabletop RPG</small>
+					Final Fantasy XIV
+					<small class="d-b subtext">Chaos - Sagittarius</small>
 				</li>
 			</ol>
 			'
