--- a/content/links.njk
+++ b/content/links.njk
@@ -341,7 +341,7 @@ scripts: '<script>
     "type": "link"
   }, {
     "name": "Rose's Playground",
-    "href": "https://alexsirac.com/",
+    "href": "https://roseyrobertson.neocities.org",
     "bg": "linear-gradient(90deg, rgb(255, 118, 242) 0%, rgb(146, 146, 233) 25%, rgb(84, 226, 255) 49%, rgb(157, 255, 179) 69%, rgb(255, 226, 100) 88%)",
     "color": "black",
     "type": "link"
