--- a/assets/css/themes/_spooky.css
+++ b/assets/css/themes/_spooky.css
@@ -1,4 +1,99 @@
-html[data-scheme='dark'][data-spooky='true'] {
+/* Colours */
+/* Dark mode */
+:root,
+:root[data-scheme='dark'] {
+  --bodybg: hsl(228, 38%, 13%);
+  --bg: hsl(228, 32%, 7%);
+  --highlight: OrangeRed;
+  --accent: OrangeRed;
+  --accentcontrast: Black;
+  --separator: PaleGreen;
+  --quote: PaleGreen;
+  --interactive: OrangeRed;
+  --input-bg: hsl(228, 38%, 13%);
+  --input-border: SpringGreen;
+  --link: OrangeRed;
+  --linkaccent: hsl(328, 100%, 19%);
+  --linkhover: LawnGreen;
+  --linkvisited: Orange;
+  --text: LavenderBlush;
+  --subtext: PeachPuff;
+  --marker: "👻";
+  --dashboard-header-bg: Indigo;
+  --dashboard-text: White;
+  --callout-info: LawnGreen;
+  --logo-x: Gold;
+  --logo-anim-1: OrangeRed;
+  --logo-anim-2: Tomato;
+  --logo-anim-3: Orange;
+  --logo-anim-4: GreenYellow;
+  --logo-anim-5: LawnGreen;
+  --logo-anim-6: LimeGreen;
+}
+
+/* Light mode */
+@media (prefers-color-scheme: light) {
+  :root {
+    --bodybg: #1e1e1e;
+    --bg: hsl(340, 100%, 92%);
+    --interactive: hsl(328, 100%, 44%);
+    --input-bg: LavenderBlush;
+    --input-border: DeepPink;
+    --separator: DeepPink;
+    --quote: hsl(328, 100%, 38%);
+    --highlight: hsl(195, 100%, 28%);
+    --accent: hsl(340, 100%, 67%);
+    --accentcontrast: Black;
+    --link: hsl(253, 100%, 37%);
+    --linkaccent: #FFB8D0;
+    --linkhover: hsl(253, 100%, 27%);
+    --linkvisited: Purple;
+    --text: hsl(253, 88%, 16%);
+    --subtext: DarkRed;
+    --marker: "💖";
+    --dashboard-header-bg: Gold;
+    --dashboard-text: Black;
+    --logo-x: Gold;
+    --logo-anim-1: BlueViolet;
+    --logo-anim-2: BlueViolet;
+    --logo-anim-3: OrangeRed;
+    --logo-anim-4: OrangeRed;
+    --logo-anim-5: Green;
+    --logo-anim-6: Green;
+  }
+}
+
+:root[data-scheme='light'] {
+  --bodybg: hsl(340, 100%, 95%);
+  --bg: hsl(340, 100%, 92%);
+  --interactive: hsl(328, 100%, 44%);
+  --input-bg: LavenderBlush;
+  --input-border: DeepPink;
+  --separator: DeepPink;
+  --quote: hsl(328, 100%, 38%);
+  --highlight: hsl(195, 100%, 28%);
+  --accent: hsl(340, 100%, 67%);
+  --accentcontrast: Black;
+  --link: hsl(253, 100%, 37%);
+  --linkaccent: #FFB8D0;
+  --linkhover: hsl(253, 100%, 27%);
+  --linkvisited: Purple;
+  --text: hsl(253, 88%, 16%);
+  --subtext: DarkRed;
+  --marker: "💖";
+  --dashboard-header-bg: Gold;
+  --dashboard-text: Black;
+  --logo-x: Gold;
+  --logo-anim-1: BlueViolet;
+  --logo-anim-2: BlueViolet;
+  --logo-anim-3: OrangeRed;
+  --logo-anim-4: OrangeRed;
+  --logo-anim-5: Green;
+  --logo-anim-6: Green;
+}
+
+
+/* html[data-scheme='dark'][data-spooky='true'] {
   --bodybg: #1e1e1e;
   --bg: Black;
   --accent: Gold;
@@ -36,23 +131,4 @@ html[data-scheme='light'][data-spooky='true'] {
     --logo-anim-4: OrangeRed;
     --logo-anim-5: Green;
     --logo-anim-6: Green;
-}
-
-.toggle--spooky::before {
-  content: '🎃';
-  font-size: 1rem;
-  animation-name: shake;
-  animation-duration: 15s;
-  animation-delay: 5s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-}
-
-[data-spooky='true'] .toggle--spooky::before {
-  animation: none;
-}
-
-[data-spooky="true"] ul.stars li::marker,
-[data-spooky="true"] ol.stars li::marker {
-  content: '👻';
-}
+} */
