--- a/content/index.njk
+++ b/content/index.njk
@@ -125,6 +125,12 @@ scripts: '
 					Final Fantasy XIV
 					<small class="d-b subtext">Chaos - Sagittarius</small>
 				</li>
+				<li>
+					Escape Room Simulator
+				</li>
+				<li>
+					Garden Galaxy
+				</li>
 			</ol>
 			'
 		)}}
