--- a/content/links.njk
+++ b/content/links.njk
@@ -132,11 +132,6 @@ scripts: '<script>
     "src": "notprincehamlet.png",
     "type": "button"
   }, {
-    "name": "PinkVampyr",
-    "href": "https://pinkvampyr.neocities.org/",
-    "src": "pinkvampyr.png",
-    "type": "button"
-  }, {
     "name": "Pixel Moondust",
     "href": "https://pixelmoondust.neocities.org/",
     "src": "pixelmoondust.png",
@@ -248,15 +243,24 @@ scripts: '<script>
   }, {
     "name": "Flamed Fury",
     "href": "https://flamedfury.com",
-    "bg": "#252525",
-    "color": "#de6b09",
-    "type": "link"
+    "src": "flamedfury.webp",
+    "type": "button"
   }, {
     "name": "Localghost",
     "href": "https://localghost.dev/",
     "bg": "#1a1a4d",
     "color": "#f00fe4",
     "type": "link"
+  }, {
+    "name": "Sara Joy",
+    "href": "https://sarajoy.dev/",
+    "src": "sarajoy.png",
+    "type": "button"
+  }, {
+    "name": "Apple Annie",
+    "href": "https://weblog.anniegreens.lol/",
+    "src": "appleannie.webp",
+    "type": "button"
   }, {
     "name": "Leviathren",
     "href": "https://leviathren.neocities.org",
@@ -334,12 +338,6 @@ scripts: '<script>
     "src": "dimden.png",
     "type": "button"
   }, {
-    "name": "Alex",
-    "href": "https://alexsirac.com/",
-    "bg": "#e1f2eb",
-    "color": "#12511b",
-    "type": "link"
-  }, {
     "name": "Rose's Playground",
     "href": "https://roseyrobertson.neocities.org",
     "bg": "linear-gradient(90deg, rgb(255, 118, 242) 0%, rgb(146, 146, 233) 25%, rgb(84, 226, 255) 49%, rgb(157, 255, 179) 69%, rgb(255, 226, 100) 88%)",
@@ -350,6 +348,12 @@ scripts: '<script>
     "href": "https://tearoom.earth/",
     "src": "tearoom.earth.png",
     "type": "button"
+  }, {
+    "name": "Meadow 🌱",
+    "href": "https://meadow.cafe/",
+    "bg": "#292a2b",
+    "color": "#fbfafa",
+    "type": "link"
   }
 ] %}
 
