--- a/structure/components/components.njk
+++ b/structure/components/components.njk
@@ -8,8 +8,8 @@
 {# Header END #}
 
 {# Callout #}
-{%- macro callout(element = "div", modifiers = '', emoji = '', header = '', body = '') -%}
-<{{element}} class="callout {{modifiers}}">
+{%- macro callout(element = "div", modifiers = '', emoji = '', style = '', header = '', body = '') -%}
+<{{element}} class="callout {{modifiers}}" {%- if style -%}style="{{style}}"{%- endif -%}>
     {%- if emoji -%}
     <div class="callout-emoji">
         {{emoji|safe}}
