--- a/content/links.njk
+++ b/content/links.njk
@@ -354,6 +354,11 @@ scripts: '<script>
     "bg": "#292a2b",
     "color": "#fbfafa",
     "type": "link"
+  },{
+    "name": "Wavebeem",
+    "href": "https://www.wavebeem.com/",
+    "src": "wavebeem.webp",
+    "type": "button"
   }
 ] %}
 
