--- a/content/index.njk
+++ b/content/index.njk
@@ -76,8 +76,8 @@ scripts: '
 	)}}
 	</article>
 	<div class="dashboard__item">
-		{%- set status = 'Getting ready for Christmas!' -%}
-		{%- set emoji = '🎄'-%}
+		{%- set status = 'New year, new me, new phone ecosystem.. hello Apple' -%}
+		{%- set emoji = '🍎'-%}
 		{%- set bg = 'LightCoral'-%}
 		{%- set textColor = 'black'-%}
 		{{ macro.callout(
