🕹️ Update currently playing

--- a/content/index.njk
+++ b/content/index.njk
@@ -145,6 +145,9 @@ scripts: '
 				<li>
 					<a href="https://store.steampowered.com/app/582500/We_Were_Here/" class="hidden">We Were Here</a>
 				</li>
+				<li>
+					<a href="https://store.steampowered.com/app/1435790/Escape_Simulator/" class="hidden">Escape Room Simulator</a>
+				</li>
 			</ol>
 			'
 		)}}
