--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -32,9 +32,12 @@
     <meta property="og:url" content="{{metadata.url + page.url}}">
     <meta property="og:image" content="https://dynamic-og-image-generator.vercel.app//api/generate?title={{ title | safe }}&author={{ metadata.author.name }}&avatar={{ metadata.avatar }}&websiteUrl={{ metadata.url }}&theme=shadesOfPurple">
     {# Favicon #}
-    <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/images/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Frills" />
+    <link rel="manifest" href="/images/favicon/site.webmanifest" />
     {# Style #}
     <link href="/css/main.css?nocache={{ nocache if nocache else metadata.nocache }}" rel="stylesheet">
     {%- if style %}
