--- a/content/colophon.njk
+++ b/content/colophon.njk
@@ -13,31 +13,29 @@ rss: false
 	<div class="reading-width">
 		<h2>Technical information</h2>
 		<ul class="stars">
-			<li>Built using <a href="https://www.11ty.dev/">eleventy</a> static site generator</li>
-			<li>Source code is on <a href="https://github.com/frillsdev/frills-neocities">Github</a></li>
-			<li>Hosted on <a href="https://neocities.org">Neocities</a> using the <a href="https://deploy-to-neocities.neocities.org/">deploy to Neocities guide</a></li>
-			<li>Coded in <a href="https://code.visualstudio.com/download">VSCode</a></li>
-			<li>Tested in <a href="https://www.mozilla.org/en-GB/firefox/new/">Firefox</a> on Windows 11 and Mac OS Catalina</li>
+			<li>Built using <a href="https://www.11ty.dev/">eleventy</a> static site generator.</li>
+			<li>Source code is on <a href="https://github.com/frillsdev/frills-neocities">Github</a>.</li>
+			<li>Hosted on <a href="https://neocities.org">Neocities</a> using the <a href="https://deploy-to-neocities.neocities.org/">deploy to Neocities guide</a>.</li>
+			<li>Coded in <a href="https://code.visualstudio.com/download">VSCode</a>.</li>
+			<li>Tested in <a href="https://www.mozilla.org/en-GB/firefox/new/">Firefox</a> on Windows 11 and Mac OS Catalina.</li>
 		</ul>
 		<h2>Credits</h2>
 		<ul class="stars">
-			<li>Latest status is powered by <a href="https://status.lol/">status.lol</a></li>
-			<li><a href="https://github.com/biancarosa/lastfm-last-played">Last.fm last played script</a> by <a href="https://biancarosa.com.br/">Bianca Rosa</a></li>
-			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb">Cherry Bomb</a></li>
-			<li>Body font is <a href="https://brailleinstitute.org/freefont">Atkinson Hyperlegible</a></li>
-			<li>Stats and kudos by <a href="https://tinylytics.app/">Tinylytics</a></li>
-			<li><a href="https://virtualobserver.moe/ayano/comment-widget">Guestbook widget</a> by virtualobserver</li>
-			<li>A couple of the 80x15 badges are created by <a href="https://zeusofthecrows.github.io/stadt/gallery/">Zeus</a></li>
+			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb">Cherry Bomb</a>.</li>
+			<li>Body font is <a href="https://brailleinstitute.org/freefont">Atkinson Hyperlegible</a>.</li>
+			<li>Stats and kudos by <a href="https://tinylytics.app/">Tinylytics</a>.</li>
+			<li>Guestbook widget by <a href="https://virtualobserver.moe/ayano/comment-widget">virtualobserver</a>.</li>
+			<li>Last.fm feed by <a href="https://github.com/biancarosa/lastfm-last-played">biancarosa / lastfm-last-played</a>.</li>
+			<li>A couple of the 80x15 badges are created by <a href="https://zeusofthecrows.github.io/stadt/gallery/">Zeus</a>.</li>
 		</ul>
 
 		<h2 id="javascript">JavaScript</h2>
-		<p>As my website built with a static site generator, if I want anything dynamic, I need to use JavaScript. You can still access the majority of the content of my website with JavaScript disabled, but here is a list of how it is used on my website:</p>
+		<p>As my website is built with a static site generator, if I want anything dynamic, I need to use JavaScript.</p>
+		<p>You can still access the majority of the content of my website with JavaScript disabled, but here is a list of how it is used on my website:</p>
 		<ul class="stars">
-			<li>I use JavaScrpt to collect statistics on webpage vistor count and for blog post kudos. This is implemented using Tinylytics, a GDPR-compliant, privacy-first website analytics tool. Cookies are not set and user identifiable information is not stored.</li>
+			<li>Statistics on webpage vistor count and for blog post kudos using Tinylytics, a GDPR-compliant, privacy-first website analytics tool. Cookies are not set and user identifiable information is not stored.</li>
 			<li>Guestbook uses JavaScript to fetch comments from a Google Sheet.</li>
 			<li>Theme and dark mode switcher uses JavaScript to change the emojis and styles of the website.</li>
-			<li>Website Carbon Badge uses JavaScript to evaluate the greeness of my website.</li>
-			<li>Latest status uses JavaScript to fetch status from status.lol.</li>
 			<li>Last music played uses JavaScript to fetch the track and artist from last.fm.</li>
 			<li>Cursor particle trail is loaded using JavaScript.</li>
 			<li>Some <a href="/experiments">experiments</a> use JavaScript to change content dynamically.</li>
@@ -47,8 +45,6 @@ rss: false
 		<ul class="stars">
 			<li><a href="/changelog">Changelog</a>
 			<li><a href="https://tinylytics.app/public/Cg94F3t4cxHAKMpzM_Z5">Vistor statistics</a>
-			<li><a href="https://proven.lol/79f13f">Proven.lol</a>
-			<li><a href="https://feedcanary.com/feed/9b76bf9c-56b3-4882-b271-9f6c6bfd1ea2">Feed canary for 'All' RSS feed</a>
 		</ul>
 	</div>
 </section>
