--- a/assets/css/pages/_nice.css
+++ b/assets/css/pages/_nice.css
@@ -1,39 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 
+:root {
+  --envelope-x: 300px;
+  --envelope-y: 200px;
+  --envelope-bg: Moccasin;
+  --envelope-shadow: Peru;
+  --letter-x: 250px;
+  --letter-y: calc(250px - 1rem - 10px);
+  --letter-bg: AntiqueWhite;
+  --letter-shadow: BurlyWood;
+  --letter-text: #180d07;
+  --letter-font: "Dancing Script", serif;
+  --letter-button-text: darkred;
+  --heart-bg: darkred;
+  --heart-text: white;
+}
+
+@media (min-width:650px) {
+  :root {
+    --envelope-x: 600px;
+    --envelope-y: 400px;
+    --letter-x: 500px;
+    --letter-y: calc(400px - 1rem - 10px);
+  }
+}
+
 .cssletter {
   position: relative;
   width: 100%;
   height: 100%;
   min-height: 50vh;
   display: flex;
-  align-items: center;
   justify-content: center;
+  user-select: none;
+  -webkit-user-select: none;
+  margin: 3rem 0;
 }
 
 .envelope {
   position: relative;
+  width: var(--envelope-x);
+  height: var(--envelope-y);
+  background: var(--envelope-bg);
+  box-shadow: inset 0 0 30px -5px var(--envelope-shadow);
 }
 
-.letters {
+.envelope::before {
+  content: '˚ʚ❤︎ɞ˚';
+  font-size: 5rem;
+  color: white;
   position: absolute;
-  overflow: hidden;
-}
-
-.letters,
-.envelope {
-  width: 300px;
-  height: 200px;
-  background: Moccasin;
-  box-shadow: inset 0 0 30px -5px Peru;
-}
-
-@media (min-width: 650px) {
-
-  .letters,
-  .envelope {
-    width: 600px;
-    height: 400px;
-  }
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
+  mix-blend-mode: soft-light;
 }
 
 .envelope-flap {
@@ -45,7 +65,7 @@
   overflow: hidden;
   transition: 0.6s linear all;
   transform-origin: top;
-  pointer-events: none;
+  pointer-events: all;
 }
 
 .envelope-folds {
@@ -58,7 +78,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  pointer-events: none;
 }
 
 .envelope-flap::before,
@@ -67,8 +86,8 @@
 .envelope-bottom::before {
   content: '';
   transform: rotate(45deg);
-  background: Moccasin;
-  box-shadow: 0 0 30px -5px Peru;
+  background: var(--envelope-bg);
+  box-shadow: 0 0 30px -5px var(--envelope-shadow);
   width: 100%;
   aspect-ratio: 1;
   display: block;
@@ -104,16 +123,6 @@
   border-radius: 5rem;
 }
 
-.envelope-inner {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
 .heart {
   z-index: 4;
   position: relative;
@@ -122,13 +131,14 @@
   width: 70px;
   aspect-ratio: 1;
   background:
-    radial-gradient(circle at 60% 65%, darkred 64%, #0000 65%) top left/50% 50%,
-    radial-gradient(circle at 40% 65%, darkred 64%, #0000 65%) top right/50% 50%,
-    conic-gradient(from -45deg at 50% 85.5%, darkred 90deg, #0000 0) bottom/100% 50%;
+    radial-gradient(circle at 60% 65%, var(--heart-bg) 64%, #0000 65%) top left/50% 50%,
+    radial-gradient(circle at 40% 65%, var(--heart-bg) 64%, #0000 65%) top right/50% 50%,
+    conic-gradient(from -45deg at 50% 85.5%, var(--heart-bg) 90deg, #0000 0) bottom/100% 50%;
   background-repeat: no-repeat;
   left: 50%;
   top: 70%;
   transform: translate(-50%, -50%);
+  cursor: pointer;
 }
 
 @media (min-width: 650px) {
@@ -145,9 +155,9 @@
   width: 70px;
   aspect-ratio: 1;
   background:
-    radial-gradient(circle at 60% 65%, #b50000 64%, #0000 65%) top left/50% 50%,
-    radial-gradient(circle at 40% 65%, #b50000 64%, #0000 65%) top right/50% 50%,
-    conic-gradient(from -45deg at 50% 85.5%, #b50000 90deg, #0000 0) bottom/100% 50%;
+    radial-gradient(circle at 60% 65%, #ffffff26 64%, #0000 65%) top left/50% 50%,
+    radial-gradient(circle at 40% 65%, #ffffff26 64%, #0000 65%) top right/50% 50%,
+    conic-gradient(from -45deg at 50% 85.5%, #ffffff26 90deg, #0000 0) bottom/100% 50%;
   background-repeat: no-repeat;
   left: 50%;
   top: 50%;
@@ -167,7 +177,7 @@
 .heart:focus {
   transform: translate(-50%, -50%);
   background-color: transparent;
-  color: white;
+  color: var(--heart-text);
 }
 
 .heart:hover::before,
@@ -179,9 +189,13 @@
 .heart-text {
   transform: translateY(-10px);
   display: block;
-  color: white;
+  color: var(--heart-text);
   font-size: 1.5rem;
-  font-family: "Dancing Script", serif;
+  font-family: var(--letter-font);
+}
+
+.envelope.active * {
+  pointer-events: none;
 }
 
 .envelope.active .envelope-flap {
@@ -190,7 +204,7 @@
 }
 
 .envelope.active .envelope-flap::before {
-  box-shadow: inset 0 0 30px -5px Peru;
+  box-shadow: inset 0 0 30px -5px var(--envelope-shadow);
 }
 
 .envelope.active .heart {
@@ -198,36 +212,58 @@
 }
 
 .nice-thing {
-  font-family: "Dancing Script", serif;
+  box-sizing: border-box;
+  font-family: var(--letter-font);
   font-size: 1rem;
   line-height: 1.1;
-  position: fixed;
-  background-color: AntiqueWhite;
-  color: #180d07;
-  width: 250px;
-  height: auto;
+  background-color: var(--letter-bg);
+  color: var(--letter-text);
+  width: var(--letter-x);
+  height: var(--letter-y);
   user-select: none;
-  box-shadow: inset 0 0 20px -5px BurlyWood;
-  padding: 1rem;
+  box-shadow: inset 0 0 20px -5px var(--letter-shadow);
+  padding: 3rem 1rem 1rem;
+  margin: 0;
   cursor: grab;
+  position: absolute;
+  top: 1rem;
+  overflow: auto;
+  text-align: center;
+  border: 0;
+}
+
+.nice-thing:active {
+  cursor: grabbing;
+}
+
+.nice-thing.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.nice-thing cite {
+  font-size: 1.25rem;
+  color: var(--letter-text);
+  margin-top: 0;
+}
+
+.nice-thing cite::before {
+  content: none;
 }
 
 .nice-thing:nth-child(even) {
-  transform: skew(1deg)
+  transform: skew(-2deg) translateY(-4px);
 }
 
 .nice-thing:nth-child(odd) {
-  transform: skew(-1deg)
-}
-
-.nice-thing footer {
-  font-size: 1rem;
+  transform: skew(2deg) translateY(4px);
 }
 
 @media (min-width: 650px) {
 
   .nice-thing {
-    width: 500px;
     font-size: 1.3rem;
   }
 }
@@ -235,31 +271,35 @@
 .closeLetter {
   font-size: 0 !important;
   position: absolute;
-  bottom: 1rem;
-  right: 1rem;
+  top: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
   background: none;
   box-shadow: none;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   padding: 0;
-  border-radius: 100rem;
   border: 0;
 }
 
 .closeLetter::before {
-  content: 'xX';
+  content: '˚ʚ❤︎ɞ˚';
   font-size: 1.5rem !important;
-  font-family: "Dancing Script", serif;
-  color: darkred;
-
+  font-family: var(--letter-font);
+  color: var(--letter-button-text);
+  text-align: center;
 }
 
 .closeLetter:hover,
 .closeLetter:active,
 .closeLetter:focus {
   background-color: transparent;
-  color: #180d07;
+  color: var(--letter-text);
+  transform: translateX(-50%);
+  padding: 0;
+  margin: 0;
+}
+
+.closeLetter:hover::before,
+.closeLetter:active::before,
+.closeLetter:focus::before {
+  content: 'xXx';
 }
