--- a/assets/css/pages/_nice.css
+++ b/assets/css/pages/_nice.css
@@ -49,10 +49,12 @@
   content: '˚ʚ❤︎ɞ˚';
   font-size: 5rem;
   color: white;
+  width: 100%;
+  text-align: center;
   position: absolute;
   left: 50%;
-  top: 30%;
-  transform: translate(-50%, -50%);
+  top: 1.5rem;
+  transform: translateX(-50%);
   mix-blend-mode: soft-light;
 }
 
