🧪 Amend experiment text

--- a/content/experiments/nice-things-people-said.njk
+++ b/content/experiments/nice-things-people-said.njk
@@ -83,7 +83,7 @@ kudos: 💌
   <div class="reading-width">
     <p>In celebration of self-love and acceptance, I've collected all the sweet words people in my life have said to or about me. Emails, teams messages, 'Good Vibes' that I have saved for a rainy brain day.</p>
   </div>
-  <p class="d-n-md">📵 No mobile-friendly yet, sorry mobile pals.</p>
+  <p class="d-n-md">📵 Not mobile-friendly yet, sorry mobile pals.</p>
   {% set messages = [
   {
     "name": "Orion Ravenwood",
